--- a/index.html
+++ b/index.html
@@ -7,105 +7,7 @@
     <meta name='viewport' content='width=device-width, initial-scale=1'>
     <script src="https://unpkg.com/alpinejs" defer></script>
     <script src="https://unpkg.com/axios@1.6.7/dist/axios.min.js"></script>
-    <style>
-        body {
-            font-family: 'Arial', sans-serif;
-            background-color: #ffe6f7; /* Light Pink */
-            color: #333;
-            padding: 20px;
-        }
-
-        .container {
-            max-width: 800px;
-            margin: 0 auto;
-            background-color: #ffffff; /* White */
-            padding: 20px;
-            border-radius: 15px; /* Rounder Corners */
-            box-shadow: 0 0 20px rgba(0, 0, 0, 0.1);
-            border: 2px solid #ff69b4; /* Hot Pink Border */
-        }
-
-        h1, h2 {
-            color: #ff1493; /* Deep Pink */
-            text-align: center;
-            font-family: 'Comic Sans MS', cursive, sans-serif; /* Fun Font */
-        }
-
-        input.input-field {
-            padding: 10px;
-            border: 2px solid #ffb6c1; /* Light Pink */
-            border-radius: 10px; /* Rounder Corners */
-            margin: 5px 0;
-            width: calc(100% - 24px); /* Full Width Input */
-        }
-
-        button.btn {
-            background-color: #ff69b4; /* Hot Pink */
-            color: white;
-            border: none;
-            padding: 10px 20px;
-            border-radius: 10px; /* Rounder Corners */
-            cursor: pointer;
-            margin: 5px;
-            font-weight: bold; /* Bold Text */
-        }
-
-        button.btn:hover {
-            background-color: #ff1493; /* Deep Pink */
-        }
-
-        .cart, .pizzas {
-            margin-top: 20px;
-        }
-
-        .cart table {
-            width: 100%;
-            border-collapse: collapse;
-            margin-top: 20px;
-        }
-
-        .cart table, .cart th, .cart td {
-            border: 2px solid #ffb6c1; /* Light Pink */
-        }
-
-        .cart th, .cart td {
-            padding: 10px;
-            text-align: left;
-        }
-
-        .cart th {
-            background-color: #ff69b4; /* Hot Pink */
-            color: white;
-        }
-
-        .pizza {
-            background-color: #fff0f5; /* Lavender Blush */
-            padding: 10px;
-            margin: 10px 0;
-            border-radius: 15px; /* Rounder Corners */
-            text-align: center;
-            border: 2px solid #ff69b4; /* Hot Pink Border */
-        }
-
-        .pizza img {
-            max-width: 100%;
-            border-radius: 15px; /* Rounder Corners */
-        }
-
-        .pizza h5 {
-            margin: 10px 0;
-            color: #ff1493; /* Deep Pink */
-        }
-
-        .message {
-            background-color: #ffb6c1; /* Light Pink */
-            padding: 10px;
-            border-radius: 10px; /* Rounder Corners */
-            color: white;
-            text-align: center;
-            margin-bottom: 20px;
-        }
-    </style>
+    <link rel="stylesheet" href="style.css">
     <script src="pizza.js"></script>
 </head>
 
@@ -169,7 +71,7 @@
         <div class="pizzas">
             <template x-for="pizza in pizzas">
                 <div class="pizza">
-                    <img src="https://thumbs.dreamstime.com/z/delicious-pizza-slices-high-angle-view-delicious-pizza-cut-slices-mozzarella-cheese-vegetables-tomato-sauce-mushrooms-273828863.jpg?ct=jpeg" alt="Medium Pizza">
+                    <img src="https://www.google.com/imgres?q=pizza%20image&imgurl=https%3A%2F%2Fimages.ctfassets.net%2Fj8tkpy1gjhi5%2F5OvVmigx6VIUsyoKz1EHUs%2Fb8173b7dcfbd6da341ce11bcebfa86ea%2FSalami-pizza-hero.jpg&imgrefurl=https%3A%2F%2Fwww.tillamook.com%2Frecipes%2Fsalami-red-onion-and-oregano-pizza&docid=Csfby1duuZ0-_M&tbnid=ma2eYxkBz-_QIM&vet=12ahUKEwjf1fuXxsCHAxUUBdsEHZsCMRMQM3oECDMQAA..i&w=1344&h=1640&hcb=2&ved=2ahUKEwjf1fuXxsCHAxUUBdsEHZsCMRMQM3oECDMQAA" alt="Medium Pizza">
                     <h5 x-text="pizza.flavour"></h5>
                     <span x-text="pizza.size"></span>
                     <strong>
